--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,16 @@
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
+
+	<repositories> <!-- Добавила ссылку на репозиторий -->
+		<repository>
+			<id>spring-repo</id>
+			<name>Spring Repository</name>
+			<url>https://repo.spring.io/milestone</url>
+		</repository>
+	</repositories>
+
+
 	<licenses>
 		<license/>
 	</licenses>
@@ -40,6 +50,21 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Добавила для Hibernate или Spring Data JPA -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- Для PostgreSQL: -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
