--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=demo
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=mysecretpassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate ?????????
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+#                             ^^^
+#none: ?????? ?? ??????, ????? ???? ?????? ?????? ???? ??????? ???????.
+#validate: ?????????, ??? ????? ???? ?????? ????????????? ????????? Hibernate. ??? ?????????????? ?????????? ?? ??????????.
+#update: ???????? ????? ???? ??????, ???????? ????? ??????? ? ???????, ?? ?????? ???????????? ??????. ????????????? ??? ?????????? ? ????????????.
+#create: ??????? ????? ???? ?????? ?????? ??? ?????? ??????? ??????????, ?????? ???????????? ??????. ???????????? ? ?????????????, ?????? ??? ????????????.
+#create-drop: ??????? ????? ???? ?????? ??? ??????? ? ??????? ?? ??? ????????? ??????????. ?????? ??? ????????????.
+
+spring.jpa.show-sql=true
+# ^ ???????? ????? SQL-????????, ??????? Hibernate ??????????, ? ???????.
+
+spring.jpa.properties.hibernate.format_sql=true
+# ^ ????????????? SQL ??????? ??? ?????? ??????????
