--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=mysecretpassword
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+
 # Hibernate ?????????
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 #                             ^^^
-#none: ?????? ?? ??????, ????? ???? ?????? ?????? ???? ??????? ???????.
-#validate: ?????????, ??? ????? ???? ?????? ????????????? ????????? Hibernate. ??? ?????????????? ?????????? ?? ??????????.
+#none !!! : ?????? ?? ??????, ????? ???? ?????? ?????? ???? ??????? ???????.
+#validate !!! : ?????????, ??? ????? ???? ?????? ????????????? ????????? Hibernate. ??? ?????????????? ?????????? ?? ??????????.
 #update: ???????? ????? ???? ??????, ???????? ????? ??????? ? ???????, ?? ?????? ???????????? ??????. ????????????? ??? ?????????? ? ????????????.
 #create: ??????? ????? ???? ?????? ?????? ??? ?????? ??????? ??????????, ?????? ???????????? ??????. ???????????? ? ?????????????, ?????? ??? ????????????.
 #create-drop: ??????? ????? ???? ?????? ??? ??????? ? ??????? ?? ??? ????????? ??????????. ?????? ??? ????????????.
@@ -19,3 +20,8 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
 # ^ ????????????? SQL ??????? ??? ?????? ??????????
+
+
+# ????????? Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
