--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,18 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate ?????????
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 #                             ^^^
 #none !!! : ?????? ?? ??????, ????? ???? ?????? ?????? ???? ??????? ???????.
 #validate !!! : ?????????, ??? ????? ???? ?????? ????????????? ????????? Hibernate. ??? ?????????????? ?????????? ?? ??????????.
 #update: ???????? ????? ???? ??????, ???????? ????? ??????? ? ???????, ?? ?????? ???????????? ??????. ????????????? ??? ?????????? ? ????????????.
 #create: ??????? ????? ???? ?????? ?????? ??? ?????? ??????? ??????????, ?????? ???????????? ??????. ???????????? ? ?????????????, ?????? ??? ????????????.
 #create-drop: ??????? ????? ???? ?????? ??? ??????? ? ??????? ?? ??? ????????? ??????????. ?????? ??? ????????????.
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
+
 
 spring.jpa.show-sql=true
 # ^ ???????? ????? SQL-????????, ??????? Hibernate ??????????, ? ???????.
