--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,29 @@
 			<scope>runtime</scope>
 		</dependency>
 
-<!--		!<dependency>-->
+		<!-- Для хэширования и безопасности: -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-crypto</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+		</dependency>
+
+
+		<!--		!<dependency>-->
 <!--			<groupId>org.springframework</groupId>-->
 <!--			<artifactId>spring-jdbc</artifactId>-->
 <!--		</dependency>-->
@@ -95,11 +117,11 @@
 <!--			<version>6.2.3</version>-->
 <!--		</dependency>-->
 
-		<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-test</artifactId>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 
 
 <!--		&lt;!&ndash; Добавила ServletAPI для обработки API запросов &ndash;&gt;-->
